<resources>
    <string name="app_name">Med Care</string>
    <string name="title_home">Medications</string>
    <string name="title_dashboard">Monthly Report</string>
    <string name="title_notifications">Profile</string>

    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="share">Share App</string>
    <string name="delete_all">Delete All</string>
    <string name="save">Save</string>

    <string name="hint_med_care">Med Care</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_confirm">Confirm password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_new_password_confirm">Confirm new password</string>
    <string name="sign_up">sign up</string>
    <string name="fields_empty">Provide your email and password to access your account</string>
    <string name="click_here">click here</string>
    <string name="unverified_email">Email not verified</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="no_account_yet">Don\'t have an account yet,</string>
    <string name="slogan">Get well soon</string>
    <string name="wel_sign_up">Sign up</string>
    <string name="wel_log_in">Log in</string>
    <string name="wel_log_in_google">Login with Google</string>
    <string name="title_activity_app_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="empty_view_title_text">It\'s a good time without medicine...</string>
    <string name="empty_view_subtitle_text">Get started by adding a medication</string>
    <string name="submit">Submit</string>
    <string name="forget_real_email">Kindly provide your registered email</string>
    <string name="hint_personal_username">Username</string>
    <string name="sodiqOladeni">sodiqOladeni</string>
    <string name="hint_number">Mobile Number</string>
    <string name="hint_date_of_birth">Date of Birth</string>
    <string name="status">Marital Status</string>
    <string name="password">Change Password</string>
    <string name="edit_details">edit details</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_lastname">Lastname</string>
    <string name="hint_first_name">Firstname</string>
    <string name="drug_name">Drug name</string>
    <string name="drug_desc">Drug description</string>
    <string name="drug_interval">Intake interval</string>
    <string name="drug_start_date">Drug start date</string>
    <string name="drug_end_date">Drug end date</string>
    <string name="add_new_med">Remind Me</string>
    <string name="not_now">Not Now</string>
    <string name="not_ready">Not ready</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="email_cant_empty">Kindly provide your email</string>
    <string name="fiels_cant_empty">Field can\'t be empty</string>
    <string name="hint_old_password">Old password</string>
    <string name="hint_confirm_new_password">Confirm new password</string>
    <string name="warning_real_password">Provide old password and change your password</string>
    <string name="hint_marital_status">Marital status</string>
    <string name="update">Update</string>
    <string name="reminder_thirty_minutes">Remind every thirty minutes</string>
    <string name="remind_one_hour">Remind every one hour</string>
    <string name="remind_daily">Remind daily</string>
    <string name="remind_weekly">Remind weekly</string>
    <string name="remind_monthly">Remind monthly</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="drug_taken">Drug time taken:</string>
    <string name="drug_taken_text">Drug taken</string>
    <string name="have_you_taken_the_drug">Have you taken the before now?</string>
    <string name="specify_time">Specify amount taken in pieces</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_med">Add Drug</string>
    <string name="issue_topic">Topic</string>
    <string name="issue_message">Message</string>
    <string name="version">Version 1.0</string>
    <string name="developed_by">Developed by</string>
    <string name="developer">\@sodiqOladeni</string>
    <string name="all_right_reserve">All right reserved</string>
    <string name="change_password">Change Password</string>
</resources>
