<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/signup_email"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/SignUpTheme">

    <EditText
        android:id="@+id/forget_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:textColor="@color/signup_text"
        android:layout_marginStart="30dp"
        android:inputType="textEmailAddress"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="70dp"
        android:textSize="@dimen/signup_text" />

    <EditText
        android:id="@+id/forget_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_new_password"
        android:textColor="@color/signup_text"
        android:layout_marginStart="30dp"
        android:inputType="textPassword"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/signup_text" />

    <EditText
        android:id="@+id/forget_new_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_new_password_confirm"
        android:textColor="@color/signup_text"
        android:layout_marginStart="30dp"
        android:inputType="textPassword"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:textSize="@dimen/signup_text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="35dp"
        style="@style/SignUpTheme">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_info_outline_black_18dp"
            android:layout_marginEnd="20dp"
            style="@style/SignUpTheme"/>

        <TextView
            android:id="@+id/forget_warning_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_real_email"
            android:textAlignment="center"
            android:textSize="12sp"
            style="@style/SignUpTheme"
            android:textColor="@color/signup_text"
            />
    </LinearLayout>

    <Button
        android:id="@+id/confirm_forget_password_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:layout_marginTop="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_gravity="center"
        android:paddingStart="45dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingEnd="45sp"
        android:background="@drawable/signup_border"
        android:textSize="25sp"
        android:onClick="forgotPasswordCorrected"/>

</LinearLayout>