<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    style="@style/SignUpTheme">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        style="@style/SignUpTheme">

        <EditText
            android:id="@+id/change_password_old"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_old_password"
            android:textColor="@color/signup_text"
            android:layout_marginBottom="15dp"
            android:inputType="textPassword"
            android:textSize="@dimen/signup_text"
            />


        <EditText
            android:id="@+id/change_password_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_new_password"
            android:textColor="@color/signup_text"
            android:layout_marginBottom="15dp"
            android:inputType="textPassword"
            android:textSize="@dimen/signup_text"
            />


        <EditText
            android:id="@+id/change_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_confirm_new_password"
            android:textColor="@color/signup_text"
            android:inputType="textPassword"
            android:textSize="@dimen/signup_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="35dp"
        style="@style/SignUpTheme">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_info_outline_black_18dp" />

        <TextView
            android:id="@+id/change_warning_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warning_real_password"
            android:textAlignment="center"
            android:textSize="12sp"
            style="@style/SignUpTheme"
            android:textColor="@color/signup_text" />
    </LinearLayout>

    <Button
        android:id="@+id/change_password_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_gravity="center"
        android:paddingStart="45dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingEnd="45sp"
        android:background="@drawable/signup_border"
        android:textSize="25sp" />

</LinearLayout>