<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/SignUpTheme">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="top"
        android:layout_marginTop="50dp"
        style="@style/SignUpTheme">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            style="@style/SignUpTheme">

            <EditText
                android:id="@+id/auth_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:drawablePadding="15dp"
                android:textColor="@color/signup_text"
                android:layout_marginBottom="15dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="20sp"
                android:background="@drawable/login_border" />



            <EditText
                android:id="@+id/auth_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/signup_text"
                android:background="@drawable/login_border"
                android:textSize="20sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/auth_login_warning_Linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="35dp"
            style="@style/SignUpTheme"
            android:visibility="visible">

            <ImageView
                android:id="@+id/auth_login_warning_help_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_info_outline_black_18dp"
                android:layout_marginEnd="20dp"
                style="@style/SignUpTheme"/>

            <TextView
                android:id="@+id/auth_login_warning_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fields_empty"
                android:textAlignment="center"
                android:textSize="12sp"
                style="@style/SignUpTheme" />
        </LinearLayout>

        <Button
            android:id="@+id/login_to_main_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wel_log_in"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:layout_gravity="center"
            android:paddingStart="45dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="45sp"
            android:background="@drawable/signup_border"
            android:textSize="@dimen/signup_text"
            android:onClick="loginToHomePage"/>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="17sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/color_main"
            android:onClick="forgotPasswordIntent"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account_yet"
                android:layout_gravity="center"
                android:textSize="17sp"
                android:layout_marginStart="20dp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="17sp"
                android:layout_marginStart="5dp"
                android:textColor="@color/color_main"
                android:onClick="signupIntent"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>