<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">


    <EditText
        android:id="@+id/help_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/issue_topic"
        android:textColor="@color/signup_text"
        android:layout_marginStart="30dp"
        android:inputType="textEmailAddress"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="15dp"
        android:textSize="@dimen/signup_text" />

    <EditText
        android:id="@+id/help_body"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:hint="@string/issue_message"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/text_border"
        android:layout_marginTop="10dp"
        android:inputType="textCapSentences|textMultiLine"
        android:paddingStart="10dp"
        android:paddingEnd="2dp"
        android:paddingTop="10dp"
        android:gravity="top"/>


    <Button
        android:id="@+id/help_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/color_main"
        android:layout_marginTop="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_gravity="center"
        android:paddingStart="45dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingEnd="45sp"
        android:background="@drawable/signup_border"
        android:textSize="25sp" />


</LinearLayout>